[EDELIVERY-15678] Fix BadRequestException message not visible to UI